objects/Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Residential_Module_design_recomm__c</fullName>
        <label>Module Design Recomm</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Non_SPWR_Inverter__c</fullName>
        <description>Include non SPRW inverter model</description>
        <label>Non SPWR Inverter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Overvoltage_protection_Q_40__c</fullName>
        <label>Overvoltage protection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Overvoltage_protection_Q_46__c</fullName>
        <label>Overvoltage protection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_PV_Breaker__c</fullName>
        <label>PV Breaker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_PV_disconnects_labeled_Comme__c</fullName>
        <label>PV disconnects labeled Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_PV_disconnects_labeled__c</fullName>
        <label>PV disconnects labeled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Percentage_of_roof_integraci__c</fullName>
        <description>How many space on the roof is needed for the modules</description>
        <label>Percentage of roof integracion</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Phases_balanced_Comment__c</fullName>
        <label>Phases balanced Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Phases_balanced__c</fullName>
        <label>Phases balanced</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Photo_Labels__c</fullName>
        <label>Photo – Labels</label>
        <picklist>
            <picklistValues>
                <fullName>DC Disc Voltage rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photovoltaic Disc and labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail of DC disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail of Pvdisconnect</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residential_Photo_Labels_de__c</fullName>
        <label>Residential Photo Labels de</label>
        <picklist>
            <picklistValues>
                <fullName>DC Disc Voltage rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photovoltaic Disc and labels</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q01_SPR1_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Module Type 1 ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q01_SPR1_EU__c</fullName>
        <label>Res Module Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>205-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220P-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225e-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225NE BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228P-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235P-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>238e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300NE BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>315e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>333NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q01_SPR1__c</fullName>
        <label>Res Module Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>200-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>205-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>238-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235-SER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q01_SPR2_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Module Type 2 ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q01_SPR2_EU__c</fullName>
        <label>Res Module Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>205-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220P-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225e-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225NE BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228P-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235P-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>238e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>315e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318e-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300NE BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>333NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q01_SPR2__c</fullName>
        <label>Res Module Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>200-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>205-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225-BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>238-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318-WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220-SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235-SER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_Array_Power__c</fullName>
        <label>Res Array Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_Comments__c</fullName>
        <label>Res Module Quantity Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_System_Size__c</fullName>
        <label>Res System Size AC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_Text1_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Module Quantity 1 ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_Text1__c</fullName>
        <label>Res Module Quantity 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_Text2_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Module Quantity 2 ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q02_Text2__c</fullName>
        <label>Res Module Quantity 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q03_A__c</fullName>
        <label>Res Array Tilt Angle A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q03_B__c</fullName>
        <label>Res Array Tilt Angle B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q03_C__c</fullName>
        <label>Res Array Tilt Angle C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q03_D__c</fullName>
        <label>Res Array Tilt Angle D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q04_A__c</fullName>
        <label>Res Array Azimuth Angle A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q04_B__c</fullName>
        <label>Res Array Azimuth Angle B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q04_C__c</fullName>
        <label>Res Array Azimuth Angle C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q04_Comments__c</fullName>
        <label>Res Array Azimuth Angle Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q04_D__c</fullName>
        <label>Res Array Azimuth Angle D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q05_Comments__c</fullName>
        <label>Res Array Free of Shading Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q05_Response__c</fullName>
        <label>Res Array Free of Shading</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q06_Response__c</fullName>
        <label>Res Conductors Secured and Protected</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q07_Response__c</fullName>
        <label>Res Interconnects Securely Connected</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q09_Picklist__c</fullName>
        <label>Res Module Ground Size</label>
        <picklist>
            <picklistValues>
                <fullName>#14 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#12 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#10 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#8 AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#6 AWG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q11_Picklist__c</fullName>
        <label>Res Mounting Location</label>
        <picklist>
            <picklistValues>
                <fullName>Roof Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Pole Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trellis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other…</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q12_Picklist__c</fullName>
        <label>Res Roof Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Replacing within 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Replacing within 10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Replacing within 15 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Replacing within 20 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof will last for more than 20 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q20_Time_Picklist__c</fullName>
        <label>Res Time of Day AM/PM</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q20_Time__c</fullName>
        <label>Res Time of Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q21_Sky_Conditions__c</fullName>
        <label>Res Sky Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partly Cloudy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mostly Cloudy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drizzling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foggy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q22_1__c</fullName>
        <label>Res Module 1 Temperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q22_2__c</fullName>
        <label>Res Module 2 Temperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q22_3__c</fullName>
        <label>Res Module 3 Temperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Q28_1_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Array 1 Inverter ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q28_1_EU__c</fullName>
        <label>Res Array 1 Inverter Model</label>
        <picklist>
            <picklistValues>
                <fullName>SPR-1100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-1200-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-1700-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-2500M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3800M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-7000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3501F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6500F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6501F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M-TL1 (SB 3000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M-TL1 (SB 4000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M-TL1 (SB 5000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M-TL1 (SB 3000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M-TL1 (SB 4000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M-TL1 (SB 5000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000M-TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000M-TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000M-TL3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q28_2_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Array 2 Inverter ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q28_2_EU__c</fullName>
        <label>Res Array 2 Inverter Model</label>
        <picklist>
            <picklistValues>
                <fullName>SPR-1100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-1200-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-1700-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-2500M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3800M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-7000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3501F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6500F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6501F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M-TL1 (SB 3000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M-TL1 (SB 4000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M-TL1 (SB 5000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M-TL1 (SB 3000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M-TL1 (SB 4000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M-TL1 (SB 5000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000M-TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000M-TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000M-TL3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q28_3_ChkBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Res Array 3 Inverter ChkBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Q28_3_EU__c</fullName>
        <label>Res Array 3 Inverter Model</label>
        <picklist>
            <picklistValues>
                <fullName>SPR-1100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-1200-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-1700-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-2500M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3800M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-7000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3501F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6500F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6501F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12001F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M-TL1 (SB 3000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M-TL1 (SB 4000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M-TL1 (SB 5000TL-21)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M-TL1 (SB 3000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M-TL1 (SB 4000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M-TL1 (SB 5000TL-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000M-TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000M-TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000M-TL3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Q30_1_1__c</fullName>
        <label>Res Array 1 Configuration Parallel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>